--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <script>
       async function getRecipe() {
         const ingredients = document.getElementById("ingredients").value;
-        const response = await fetch("http://192.168.68.54:8000/recipe", {  // ←ここは自分のIPに！
+        const response = await fetch("https://ai-kondate-app2.onrender.com/recipe", {
+          // ←ここは自分のIPに！
           method: "POST",
           headers: {
             "Content-Type": "application/json"
