feat: ローディング表示を追加

--- a/index.html
+++ b/index.html
@@ -1,73 +1,92 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI献立アシスタント</title>
-    <style>
-      body {
-        font-family: sans-serif;
-        margin: 1em;
-        padding: 0;
-        line-height: 1.6;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI献立アシスタント</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 1em;
+      padding: 0;
+      line-height: 1.6;
+    }
 
-      h1 {
-        font-size: 1.8em;
+    h1 {
+      font-size: 1.8em;
+    }
+
+    input, button {
+      padding: 0.5em;
+      font-size: 1em;
+      margin-top: 0.5em;
+    }
+
+    #result {
+      margin-top: 1em;
+      white-space: pre-wrap;
+    }
+
+    #loading {
+      display: none;
+      margin-top: 1em;
+      color: #555;
+      font-style: italic;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        font-size: 1em;
       }
 
       input, button {
-        padding: 0.5em;
-        font-size: 1em;
-        margin-top: 0.5em;
+        width: 100%;
+        box-sizing: border-box;
       }
+    }
+  </style>
+</head>
+<body>
+  <h1>AI献立アシスタント</h1>
+  <p>冷蔵庫の中の食材を入力してください：</p>
+  <input type="text" id="ingredients" placeholder="例：卵、にんじん、牛乳" />
+  <button onclick="getRecipe()">レシピを探す</button>
 
-      #result {
-        margin-top: 1em;
-        white-space: pre-wrap;
-      }
+  <div id="loading">🔄 レシピを考え中...</div>
 
-      @media (max-width: 600px) {
-        body {
-          font-size: 1em;
-        }
+  <h2>おすすめレシピ</h2>
+  <div id="result"></div>
 
-        input, button {
-          width: 100%;
-          box-sizing: border-box;
-        }
-      }
-    </style>
-  </head>
+  <script>
+    async function getRecipe() {
+      const ingredients = document.getElementById("ingredients").value;
+      const loadingEl = document.getElementById("loading");
+      const resultEl = document.getElementById("result");
 
-  <body>
-    <h1>AI献立アシスタント</h1>
-    <p>冷蔵庫の中の食材を入力してください：</p>
-    <input type="text" id="ingredients" placeholder="例：卵、にんじん、牛乳">
-    <button onclick="getRecipe()">レシピを探す</button>
+      loadingEl.style.display = "block";
+      resultEl.innerText = "";
 
-    <h2>おすすめレシピ</h2>
-    <div id="result"></div>
-
-    <script>
-      async function getRecipe() {
-        const ingredients = document.getElementById("ingredients").value;
+      try {
         const response = await fetch("https://ai-kondate-app2.onrender.com/recipe", {
-          // ←ここは自分のIPに！
           method: "POST",
           headers: {
             "Content-Type": "application/json"
           },
-          body: JSON.stringify({ ingredients: ingredients })
+          body: JSON.stringify({ ingredients })
         });
 
         if (response.ok) {
           const data = await response.json();
-          document.getElementById("result").innerText = data.recipe;
+          resultEl.innerText = data.recipe;
         } else {
-          document.getElementById("result").innerText = "レシピの取得に失敗しました。";
+          resultEl.innerText = "レシピの取得に失敗しました。";
         }
+      } catch (error) {
+        resultEl.innerText = "エラーが発生しました。もう一度お試しください。";
+      } finally {
+        loadingEl.style.display = "none";
       }
-    </script>
-  </body>
+    }
+  </script>
+</body>
 </html>
